Commit para entrega (SLIDES/ DOCUMENTAÇÃO/ FORMATAÇÃO DE LETRAS)

--- a/public/antesQuiz.html
+++ b/public/antesQuiz.html
@@ -37,7 +37,7 @@
             <br>
             <br>
             <br>
-            <p>Bem-vindo! Você já ouviu falar da banda "O Rappa"? <br><br>Se sim, que tal testar seus conhecimentos sobre essa icônica banda brasileira com o nosso quiz? Vamos ver o quanto você sabe sobre as músicas, álbuns e a história dessa banda que marcou gerações com suas letras impactantes e sonoridade única. Prepare-se para um desafio divertido e cheio de nostalgia! <br>Para realizar o quiz, cadastre-se</p>
+            <p>BEM-VINDO! VOCÊ JÁ OUVIU FALAR DA BANDA "O RAPPA"? <br><br>SE SIM, QUE TAL TESTAR SEUS CONHECIMENTOS SOBRE ESSA ICÔNICA BANDA BRASILEIRA COM O NOSSO QUIZ? VAMOS VER O QUANTO VOCÊ SABE SOBRE AS MÚSICAS, ÁLBUNS E A HISTÓRIA DESSA BANDA QUE MARCOU GERAÇÕES COM SUAS LETRAS IMPACTANTES E SONORIDADE ÚNICA. PREPARE-SE PARA UM DESAFIO DIVERTIDO E CHEIO DE NOSTALGIA! PARA REALIZAR O QUIZ, <br>CADASTRE-SE.</p>
             <div class="divSaibaMais">
                 <img src="./assets/imgs/DedoApontando.png" alt="">
                 <a href="./cadastro.html"><i>Cadastre-se</i></a>
