--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -51,14 +51,14 @@
   <!-- -------BODY início------- -->
   <div class="alinhaConjunto">
     <div class="conjunto">
-      <h2 class="title">Bem Vindo!</h2>
+      <h2 class="title">BEM VINDO!</h2>
       <div class="nomeIdade">
         <div class="form">
           <input type="text" id="nome_input" class="form__input" autocomplete="off" placeholder=" ">
-          <span class="form__span1">Nome</span>
+          <span class="form__span1">NOME</span>
         </div>
         <div class="form_idade">
-          <span class="select_idade">Idade</span>
+          <span class="select_idade">IDADE</span>
           <select id="selectIdade">
             <option value="0-12">0-12</option>
             <option value="13-18">13-18</option>
@@ -70,17 +70,17 @@
       </div>
       <div class="form">
         <input type="text" id="email_input" class="form__input" autocomplete="off" placeholder=" ">
-        <span class="form__span">Email</span>
+        <span class="form__span">EMAIL</span>
       </div>
       <div class="form">
         <input type="text" id="senha_input" class="form__input" autocomplete="off" placeholder=" ">
-        <span class="form__span">Senha</span>
+        <span class="form__span">SENHA</span>
       </div>
       <div class="form">
         <input type="text" id="confirmacao_senha_input" class="form__input" autocomplete="off" placeholder=" ">
-        <span id="confirmarSenha" class="form__span">Confirmação de Senha</span>
+        <span id="confirmarSenha" class="form__span">CONFIRMAÇÃO DE SENHA</span>
       </div>
-      <p id="btn"><button onclick="cadastrar()" class="button">Cadastrar</button></p>
+      <p id="btn"><button onclick="cadastrar()" class="button">CADASTRAR</button></p>
       <div id="div_aguardar" class="loading-div">
         <img src="./assets/aguarde-pink3.gif" id="loading-  gif" />
       </div>
