--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -22,7 +22,7 @@
                     <b></b>
                     <a href="./dashboard.html">
                         <i class="fa fa-house nav-icon"></i>
-                        <span class="nav-text">Dashboard</span>
+                        <span class="nav-text">DASHBAORD</span>
                     </a>
                 </li>
 
@@ -31,7 +31,7 @@
                     <b></b>
                     <a href="./quiz.html">
                         <i class="fa fa-user nav-icon"></i>
-                        <span class="nav-text">Quiz</span>
+                        <span class="nav-text">QUIZ</span>
                     </a>
                 </li>
 
@@ -40,7 +40,7 @@
                     <b></b>
                     <a href="./formulario.html">
                         <i class="fa fa-calendar-check nav-icon"></i>
-                        <span class="nav-text">Formulário</span>
+                        <span class="nav-text">FORMULÁRIO</span>
                     </a>
                 </li>
                 <li class="nav-item">
@@ -48,7 +48,7 @@
                     <b></b>
                     <a href="./index.html">
                         <i class="fa fa-sliders nav-icon"></i>
-                        <span class="nav-text">Sair</span>
+                        <span class="nav-text">SAIR</span>
                     </a>
                 </li>
             </ul>
@@ -60,25 +60,25 @@
                     <div class="personal-bests">
                         <div class="personal-bests-container">
                             <div class="best-item box-one">
-                                <p>Álbum Mais Votado: </p>
+                                <p>ÁLBUM MAIS VOTADO: </p>
                                 <b id="div_votado"></b>
                                 <span id="b_votos"></span>
                             </div>
                             <div class="best-item box-two">
-                                <p>Sua Posição: </p>
+                                <p>SUA POSIÇÃO: </p>
                                 <b id="b_posicao"></b>
                                 <span id="span_pontos"></span>
                             </div>
                             <div class="best-item box-three">
-                                <p>Ultima Pontuação: </p>
-                                <b id="b_pontuacao""></b>
+                                <p>ÚLTIMA PONTUAÇÃO: </p>
+                                <b id="b_pontuacao"></b>
                             </div>
                         </div>
                     </div>
                 </div>
 
                 <div class=" activities">
-                                    <h1>Gráficos</h1>
+                                    <h1>GRÁFICOS</h1>
                                     <div class="activity-container">
                                         <div class="box1">
                                             <div class="chart-container">
@@ -103,9 +103,9 @@
                                 <div id="tabelaRanking" class="tabela">
 
                                     <div class="cabecalho">
-                                        <div class="cabecalho-item">Posição</div>
-                                        <div class="cabecalho-item">Usuário</div>
-                                        <div class="cabecalho-item">Pontuação</div>
+                                        <div class="cabecalho-item">POSIÇÃO</div>
+                                        <div class="cabecalho-item">USUÁRIO</div>
+                                        <div class="cabecalho-item">PONTUAÇÃO</div>
                                     </div>
                                     <!--Para barra de rolagem-->
                                     <div class="corpo-scroll">
