--- a/public/formulario.html
+++ b/public/formulario.html
@@ -22,7 +22,7 @@
                     <b></b>
                     <a href="./dashboard.html">
                         <i class="fa fa-house nav-icon"></i>
-                        <span class="nav-text">Dashboard</span>
+                        <span class="nav-text">DASHBOARD</span>
                     </a>
                 </li>
 
@@ -31,7 +31,7 @@
                     <b></b>
                     <a href="./quiz.html">
                         <i class="fa fa-user nav-icon"></i>
-                        <span class="nav-text">Quiz</span>
+                        <span class="nav-text">QUIZ</span>
                     </a>
                 </li>
 
@@ -40,7 +40,7 @@
                     <b></b>
                     <a href="./formulario.html">
                         <i class="fa fa-calendar-check nav-icon"></i>
-                        <span class="nav-text">Formulário</span>
+                        <span class="nav-text">FORMULÁRIO</span>
                     </a>
                 </li>
                 <li class="nav-item">
@@ -48,7 +48,7 @@
                     <b></b>
                     <a href="./index.html">
                         <i class="fa fa-sliders nav-icon"></i>
-                        <span class="nav-text">Sair</span>
+                        <span class="nav-text">SAIR</span>
                     </a>
                 </li>
 
@@ -69,46 +69,46 @@
                 <div class="conteudoFormulario">
                     <h1>Formulário - O Rappa</h1><br>
                     <section class="sexo">
-                        <h3>Selecione seu sexo:</h3>
+                        <h3>SELECIONE SEU SEXO:</h3>
                         <input type="radio" id="duvida1a" class="btn1" name="duvida1" value="F">
-                        <label class="duvida11" for="duvida1a">Feminino</label><br>
+                        <label class="duvida11" for="duvida1a">FEMININO</label><br>
                         <input type="radio" id="duvida1b" class="btn2" name="duvida1" value="M">
-                        <label class="duvida12" for="duvida1b">Masculino</label><br><br>
+                        <label class="duvida12" for="duvida1b">MASCULINO</label><br><br>
 
                     </section>
 
                     <section class="album" onclick="mudarAlbum()">
-                        <h3>Qual seu álbum favorito?</h3>
+                        <h3>QUAL SEU ÁLBUM FAVORITO?</h3>
                         <input type="radio" id="duvida2a" class="btn1.2" name="duvida2" value="1">
-                        <label class="duvida21" for="duvida2a">O Rappa</label><br>
+                        <label class="duvida21" for="duvida2a">O RAPPA</label><br>
                         <input type="radio" id="duvida2b" class="btn2.2" name="duvida2" value="2">
-                        <label class="duvida22" for="duvida2b">Rappa Mundi</label><br>
+                        <label class="duvida22" for="duvida2b">RAPPA MUNDI</label><br>
                         <input type="radio" id="duvida2c" class="btn3.2" name="duvida2" value="3">
-                        <label class="duvida23" for="duvida2c">Lado B Lado A</label><br>
+                        <label class="duvida23" for="duvida2c">LADO B LADO</label><br>
                         <input type="radio" id="duvida2d" class="btn4.2" name="duvida2" value="4">
-                        <label class="duvida24" for="duvida2d">O Silêncio Q Precede O Esporro</label><br>
+                        <label class="duvida24" for="duvida2d">O SILÊNCIO Q PRECEDE O ESPORRO</label><br>
                         <input type="radio" id="duvida2e" class="btn5.2" name="duvida2" value="5">
-                        <label class="duvida25" for="duvida2e">7 Vezes</label><br>
+                        <label class="duvida25" for="duvida2e">7 VEZES</label><br>
                         <input type="radio" id="duvida2f" class="btn6.2" name="duvida2" value="6">
-                        <label class="duvida26" for="duvida2f">Nunca Tem Fim...</label><br>
+                        <label class="duvida26" for="duvida2f">NUNCA TEM FIM...</label><br>
                         <input type="radio" id="duvida2g" class="btn7.2" name="duvida2" value="7">
-                        <label class="duvida26" for="duvida2g">Não Possuo</label><br><br>
+                        <label class="duvida26" for="duvida2g">NÃO POSSUO</label><br><br>
 
                         <!-- Como o gráfico de vot -->
                         <section class="comoConheceu">
-                            <h3>Como conheceu a banda O Rappa?</h3>
+                            <h3>COMO CONHECEU A BANDA O RAPPA?</h3>
                             <input type="radio" id="duvida3a" class="btn1.3" name="duvida3" value="2">
-                            <label class="duvida31" for="duvida3a">Família e amigos</label><br>
+                            <label class="duvida31" for="duvida3a">FAMÍLIA E AMIGOS</label><br>
                             <input type="radio" id="duvida3b" class="btn2.3" name="duvida3" value="2">
-                            <label class="duvida32" for="duvida3b">Instagram, TikTok, Youtube, etc.</label><br>
+                            <label class="duvida32" for="duvida3b">INSTAGRAM, TIKTOK, YOUTUBE, ETC.</label><br>
                             <input type="radio" id="duvida3c" class="btn3.3" name="duvida3" value="2">
-                            <label class="duvida33" for="duvida3c">Jornal ou Revista</label><br>
+                            <label class="duvida33" for="duvida3c">JORDNAL OU REVISTA</label><br>
                             <input type="radio" id="duvida3d" class="btn4.3" name="duvida3" value="4">
-                            <label class="duvida34" for="duvida3d">Outro</label><br><br>
+                            <label class="duvida34" for="duvida3d">OUTRO</label><br><br>
                         </section>
 
                         <section class="botao">
-                            <button onclick="enviarInformacoes()">Salvar</button>
+                            <button onclick="enviarInformacoes()">SALVAR</button>
                         </section>
                 </div>
                 <div class="imagemFormulario">
@@ -116,11 +116,11 @@
                 </div>
             </div>
             <div class="right-content">
-                <h1 class=titulo-album id="tituloAlbum">Bem Vindo(a) Ao Formulário!</h1>
+                <h1 class=titulo-album id="tituloAlbum">BEM VINDO(A) AO FORMULÁRIO!</h1>
                 <p class="informacoes-album">
-                    <u id="dtLancamento">Obrigado por se cadastrar!</u><br>
+                    <u id="dtLancamento">OBRIGADO POR SE CADASTRAR!</u><br>
                     <b id="qtdMusicas"></b><br>
-                    <span id="faixas">VOCÊ SABIA?<br><br> As letras das músicas frequentemente abordam temas como desigualdade social, violência urbana, corrupção e injustiça, refletindo a realidade das cominudades marginalizadas do Brasil e dando voz aos excluídos </span>
+                    <span id="faixas">VOCÊ SABIA?<br><br> AS LETRAS DAS MÚSICAS FREQUENTEMENTE ABORDAM TEMAS COMO DESIGUALDADE SOCIAL, VIOLÊNCIA URBANA, CORRUPÇÃO E INJUSTIÇA, REFLETINDO A REALIDADE DAS COMUNIDADES MARGINALIZADAS DO BRASIL E DANDO VOZ AOS EXCLUÍDOS.</span>
                 </p>
             </div>
         </section>
@@ -128,8 +128,6 @@
 </body>
 
 <script>
-
-
     const navItems = document.querySelectorAll(".nav-item");
 
     navItems.forEach((navItem, i) => {
@@ -252,9 +250,9 @@
         } else if (duvida2g.checked) {
             show.innerHTML = `<img src="./assets/albuns/naoTenhoAlbum.jpg">`
             tituloAlbum.innerHTML = "VOCÊ SABIA?"
-            dtLancamento.innerHTML = "Introdução a Curiosidade"
+            dtLancamento.innerHTML = "O nome 'O Rappa' se originou de uma gíria."
             qtdMusicas.innerHTML = ""
-            faixas.innerHTML = `<span>Desenvolvimento do texto sobre a curiosidade</span>
+            faixas.innerHTML = `<span>O nome o rappa foi inspirado na gíria carioca rapa, que significa "tiro" ou "confusão", reflentindo a realidade das ruas do rio de janeiro e a mensagem social presente nas musicas da banda</span>
             `
         }
     }
