--- a/public/index.html
+++ b/public/index.html
@@ -39,10 +39,9 @@
 
     <div id="chamaSobre" class="conjunto2">
         <div class="sobreTexto">
-            <p>O Rappa, banda carioca formada em 1993, é conhecida por sua fusão única de reggae, rock, rap e música
-                popular brasileira. Com letras que abordam questões sociais e políticas, a banda conquistou uma legião
-                de fãs ao longo dos anos. Seus álbuns icônicos, como "Lado B Lado A" e "O Silêncio Q Precede O
-                Esporro",marcaram a música brasileira com mensagens de resistência e esperança. </p>
+            <p>
+                O RAPPA, BANDA CARIOCA FORMADA EM 1993, É CONHECIDA POR SUA FUSÃO ÚNICA DE REGGAE, ROCK, RAP E MÚSICA POPULAR BRASILEIRA. COM LETRAS QUE ABORDAM QUESTÕES SOCIAIS E POLÍTICAS, A BANDA CONQUISTOU UMA LEGIÃO DE FÃS AO LONGO DOS ANOS. SEUS ÁLBUNS ICÔNICOS, COMO "LADO B LADO A" E "O SILÊNCIO Q PRECEDE O ESPORRO", MARCARAM A MÚSICA BRASILEIRA COM MENSAGENS DE RESISTÊNCIA E ESPERANÇA.
+            </p>
             <div class="divSaibaMais">
                 <img src="./assets/imgs/DedoApontando.png" alt="">
                 <a href="./sobre.html"><i>Saiba Mais</i></a>
@@ -116,11 +115,11 @@
     <div class="sobreMim">
         <div class="sobreMim-texto">
             <p>
-                Olha só! Você por aqui!
-                <br>
-                Tudo bem?
-                <br>
-                Me chamo Guilherme Borin e sou um grande fã da banda "O Rappa". Meu contato com a banda começou enquanto ainda criança navegava pelo YouTube, assistindo a diversos clipes que me cativaram pela diferença das letras e a sonoridade única. Desde então, venho acompanhando a trajetória deles e apreciando cada música. Estou aqui para compartilhar essa paixão e proporcionar a vocês um espaço dedicado à história e ao legado de "O Rappa". Venha conhecer mais sobre essa banda fantástica!
+                OLHA SÓ! VOCÊ POR AQUI!                
+                <br><br>
+                TUDO BEM?
+                <br><br>
+                ME CHAMO GUILHERME BORIN E SOU UM GRANDE FÃ DA BANDA "O RAPPA". MEU CONTATO COM A BANDA COMEÇOU ENQUANTO AINDA CRIANÇA NAVEGAVA PELO YOUTUBE, ASSISTINDO A DIVERSOS CLIPES QUE ME CATIVARAM PELA DIFERENÇA DAS LETRAS E A SONORIDADE ÚNICA. DESDE ENTÃO, VENHO ACOMPANHANDO A TRAJETÓRIA DELES E APRECIANDO CADA MÚSICA. ESTOU AQUI PARA COMPARTILHAR ESSA PAIXÃO E PROPORCIONAR A VOCÊS UM ESPAÇO DEDICADO À HISTÓRIA E AO LEGADO DE "O RAPPA". VENHA CONHECER MAIS SOBRE ESSA BANDA FANTÁSTICA!
             </p>
             <div>
             </div>
@@ -132,7 +131,7 @@
     <footer class="rodape">
         <div class="column1">
             <h2>O Rappa</h2>
-            <p>Site criado com o intuito de celebrar e compartilhar a história e a trajetória da banda "O Rappa". Aqui, fãs e curiosos podem explorar informações sobre a carreira do grupo, seus álbuns, músicas e influência no cenário musical.
+            <p>SITE CRIADO COM O INTUITO DE CELEBRAR E COMPARTILHAR A HISTÓRIA E A TRAJETÓRIA DA BANDA "O RAPPA". AQUI, FÃS E CURIOSOS PODEM EXPLORAR INFORMAÇÕES SOBRE A CARREIRA DO GRUPO, SEUS ÁLBUNS, MÚSICAS E INFLUÊNCIA NO CENÁRIO MUSICAL.
             </p>
             <div class="logos">
                 <a href="https://www.facebook.com"><img class="icone1" src="./assets/icones/iconefacebook.png"
@@ -144,18 +143,18 @@
             </div>
         </div>
         <div class="column2">
-            <h2>Menu</h2>
+            <h2>MENU</h2>
             <div class="lista"></div>
-            <a href="./index.html" class="uno">Início</a>
-            <a href="#chamaSobre">Sobre</a>
-            <a href="#Discografia">Álbuns</a>
-            <a href="./cadastro.html">Cadastro</a>
-            <a href="./antesQuiz.html">Quiz</a>
-            <a href="./login.html">Login</a>
+            <a href="./index.html" class="uno">INÍCIO</a>
+            <a href="#chamaSobre">SOBRE</a>
+            <a href="#Discografia">ÁLBUNS</a>
+            <a href="./cadastro.html">CADASTRO</a>
+            <a href="./antesQuiz.html">QUIZ</a>
+            <a href="./login.html">LOGIN</a>
         </div>
         <div class="column3">
             <div class="logos2">
-                <h2>Contato</h2>
+                <h2>CONTATO</h2>
                 <p><img class="icone5" src="./assets/icones/iconelocal.png" alt="Ícone do local"><a href="">Rua Haddock
                         Lobo,
                         595 <br><b>Cerqueira César, São Paulo</b></a></p>
