--- a/public/login.html
+++ b/public/login.html
@@ -52,20 +52,20 @@
         <!-- -------BODY início------- -->
         <div class="alinhaConjunto">
             <div class="conjunto">
-                <h2 class="title">Bem Vindo!</h2>
+                <h2 class="title">BEM VINDO!</h2>
                 <div class="form">
                     <input type="text" id="nome_input" class="form__input" autocomplete="off" placeholder=" ">
-                    <span class="form__span">Nome</span>
+                    <span class="form__span">NOME</span>
                 </div>
                 <div class="form">
                     <input type="text" id="email_input" class="form__input" autocomplete="off" placeholder=" ">
-                    <span class="form__span">Email</span>
+                    <span class="form__span">EMAIL</span>
                 </div>
                 <div class="form">
                     <input type="text" id="senha_input" class="form__input" autocomplete="off" placeholder=" ">
-                    <span class="form__span">Senha</span>
+                    <span class="form__span">SENHA</span>
                 </div>
-                <p id="btn"><button onclick="entrar()" class="button">Entrar</button></p>
+                <p id="btn"><button onclick="entrar()" class="button">ENTRAR</button></p>
                 <div id="div_aguardar" class="loading-div">
                     <img src="./assets/aguarde-pink3.gif" id="loading-  gif" />
                 </div>
